# bongus_trading_bot

./: .agent.md  .gitignore  HOW_IT_WORKS.md  TRAINING_AND_DEPLOYMENT.md  auto_tweaker.py  config.py  cost_model.py  current_sentiment.json  dashboard.py  execution_alpha.py  feature_engineering.py  get_binance_data.py  king_watchdog.py  live_trader.py  main.py  modeling.py  pyproject.toml  pyrightconfig.json  requirements.txt  sentiment_scraper.py  state.db  state.db-shm  state.db-wal  state_store.py  strategy.py  test_modeling_script.py  test_modeling_script2.py  test_modeling_script3.py  walk_forward.py  web_dashboard.py
.github/agents/: bug_fixer.agent.md
bongus/: __init__.py  cli.py
bongus/core/: analytics.py  config.py  cost_model.py  strategy.py
bongus/data/: binance_fetcher.py  feature_engineering.py  generate_sample.py  loader.py
bongus/engine/: analytics.py  cost_model.py  execution_alpha.py  state_store.py
bongus/ipc/: __init__.py  client.py  execution.py  telemetry.py
bongus/monitoring/: cli_dashboard.py  king_watchdog.py  telegram_alerter.py  terminal_dashboard.py  web_dashboard.py
bongus/research/: optimizer.py  walk_forward.py
bongus/risk/: execution.py
bongus/strategies/: auto_tweaker.py  (+2 more)
execution_engine/: Cargo.toml  build_err.txt  check_err.txt  current_sentiment.json  err_zmq.txt  test_send.py
scripts/: backtest.py  generate_sample_data.py  live_trader.py  live_trader2.py  walk_forward.py
tests/: test_cost_model.py  test_data_loader.py  test_risk_execution.py  test_sentiment_scraper.py  test_strategy.py  test_walk_forward.py
(+7 files in other folders)
